# trading-journal

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: __init__.py  __main__.py  config.py  host.py  logging.py  main.py  models.py  persistence.py  plugins.py  settings.py
app/core/: __init__.py  hosting.py  logging.py  settings.py
app/journal/: __init__.py  cli.py  host.py  models.py  settings.py
app/oanda/: __init__.py  api.py  cli.py  config.py  host.py  models.py  settings.py
app/utils/: __init__.py  events.py  helpers.py  logging.py  settings.py
scripts/: coverage.sh  dev.py  hooks.sh  install.py  update.sh
tests/: __init__.py  test_main.py
