[project]
name = "trading-journal"
version = "0.0.1"
description = "Trading journal automation app."
license = { text = "Proprietary" }
readme = "README.md"
authors = [
    {name = "Mohammed Fareed", email = "mohdf.fareed@icloud.com"}
]
urls = { repository = "https://github.com/mohdfareed/trading-journal" }

# MARK: Dependencies

requires-python = ">=3.13"

dependencies = [
    "poetry",
    "typer",
    "blinker",
    "pydantic",
    "pydantic-settings",
    "pydantic_extra_types",
    "pycountry", # pydantic currency dependency
]

[project.optional-dependencies]
dev = [
    "pre-commit", # pre-commit formatting hooks
    "pytest",     # testing
    "pytest-cov", # test coverage
    "pylance",    # language server
    "black",      # code formatting
    "isort",      # import formatting
]

# MARK: Poetry

[project.scripts]
trading-journal = "app.main:app"

[tool.poetry]
packages = [
    { include = "app", from = "." },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# MARK: Tools

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "integration",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
